# races

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE.md  README.md  config.py  config.yml  gare_podistiche.csv  pyproject.toml  pyrightconfig.json  races.py  requirements.txt  run.sh  scraper.py  test_races_api.py
.github/workflows/: deploy.yml
app/: __init__.py  races.py  races_api.py
app/controllers/: __init__.py  races.py  races_controller.py  types.py
app/core/: __init__.py  config.py  log.py
app/dtos/: __init__.py  races.py
app/models/: __init__.py  races.py
app/routes/: blueprint.py
app/services/: __init__.py  races.py  races_services.py
app/static/css/: style.css
app/templates/: add-race.html  base.html  create-race.html  header.html  index.html  update-race.html
core/: __init__.py  config.py
instance/: dev.db  test.db
templates/: base.html  header.html  index.html
test/: create_race.sh  delete_race.sh  get_race.sh  list_race.sh  test_races_api.py  update_race.sh
